# AES_zero_knowledge_proof_circuit

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs  benchmark_encrypt.rs
src/: aes.rs  aes_circuit.rs  circuit.rs  helpers.rs  lib.rs  main.rs  ops.rs  prover.rs  ristretto.rs  xor.rs
src/aes_circuit/: marlin.rs  mod.rs  plonk.rs
src/helpers/: mod.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__tests__[0, 81, 47, 209, 177, 200, 137, 255, 84, 118, 109, 205, 250, 27, 153, 234].snap.new  integration_tests__tests__[117, 236, 9, 147, 32, 11, 99, 51, 83, 192, 207, 124, 187, 37, 208, 220].snap.new  integration_tests__tests__[135, 110, 70, 166, 242, 76, 231, 140, 77, 144, 74, 216, 151, 236, 195, 149].snap.new  integration_tests__tests__[135, 236, 74, 140, 242, 110, 195, 216, 77, 76, 70, 149, 151, 144, 231, 166].snap.new  integration_tests__tests__[15, 214, 218, 169, 96, 49, 56, 191, 111, 192, 16, 107, 94, 179, 19, 1].snap.new  integration_tests__tests__[161, 79, 61, 254, 120, 232, 3, 252, 16, 213, 168, 223, 76, 99, 41, 35].snap.new  integration_tests__tests__[161, 99, 168, 252, 120, 79, 41, 223, 16, 232, 61, 35, 76, 213, 3, 254].snap.new  integration_tests__tests__[164, 156, 127, 242, 104, 159, 53, 43, 107, 91, 234, 67, 2, 106, 80, 73].snap.new  integration_tests__tests__[170, 143, 95, 3, 97, 221, 227, 239, 130, 210, 74, 210, 104, 50, 70, 154].snap.new  integration_tests__tests__[172, 115, 207, 123, 239, 193, 17, 223, 19, 181, 214, 181, 69, 35, 90, 184].snap.new  integration_tests__tests__[172, 193, 214, 184, 239, 181, 90, 123, 19, 35, 207, 223, 69, 115, 17, 181].snap.new  integration_tests__tests__[190, 131, 44, 200, 212, 59, 134, 192, 10, 225, 212, 77, 218, 100, 242, 254].snap.new  integration_tests__tests__[190, 59, 212, 254, 212, 225, 242, 200, 10, 100, 44, 192, 218, 131, 134, 77].snap.new  integration_tests__tests__[20, 21, 181, 191, 70, 22, 21, 236, 39, 70, 86, 215, 52, 42, 216, 67].snap.new  integration_tests__tests__[212, 191, 93, 48, 224, 180, 82, 174, 184, 65, 17, 241, 30, 39, 152, 229].snap.new  integration_tests__tests__[212, 39, 17, 174, 224, 191, 152, 241, 184, 180, 93, 229, 30, 65, 82, 48].snap.new  integration_tests__tests__[224, 146, 127, 232, 200, 99, 99, 192, 217, 177, 53, 80, 133, 184, 190, 1].snap.new  integration_tests__tests__[225, 251, 150, 124, 232, 200, 174, 155, 53, 108, 210, 186, 151, 79, 251, 83].snap.new  integration_tests__tests__[225, 79, 210, 155, 232, 251, 251, 186, 53, 200, 150, 83, 151, 108, 174, 124].snap.new  integration_tests__tests__[233, 49, 125, 181, 203, 50, 44, 114, 61, 46, 137, 95, 175, 9, 7, 148].snap.new  integration_tests__tests__[233, 9, 137, 114, 203, 49, 7, 95, 61, 50, 125, 148, 175, 46, 44, 181].snap.new  integration_tests__tests__[234, 131, 92, 240, 4, 69, 51, 45, 101, 93, 152, 173, 133, 150, 176, 197].snap.new  integration_tests__tests__[235, 64, 242, 30, 89, 46, 56, 132, 139, 161, 19, 231, 27, 195, 66, 210].snap.new  integration_tests__tests__[241, 0, 111, 85, 193, 146, 76, 239, 124, 200, 139, 50, 93, 181, 213, 12].snap.new  integration_tests__tests__[247, 131, 64, 63, 39, 67, 61, 240, 155, 181, 49, 255, 84, 171, 169, 211].snap.new  integration_tests__tests__[247, 171, 49, 240, 39, 131, 169, 255, 155, 67, 64, 211, 84, 181, 61, 63].snap.new  integration_tests__tests__[37, 209, 169, 173, 189, 17, 209, 104, 182, 58, 51, 142, 76, 76, 192, 176].snap.new  integration_tests__tests__[38, 14, 46, 23, 61, 65, 183, 125, 232, 100, 114, 169, 253, 210, 139, 37].snap.new  integration_tests__tests__[4, 102, 129, 229, 224, 203, 25, 154, 72, 248, 211, 122, 40, 6, 38, 76].snap.new  integration_tests__tests__[57, 37, 132, 29, 2, 220, 9, 251, 220, 17, 133, 151, 25, 106, 11, 50].snap.new  integration_tests__tests__[71, 55, 148, 237, 64, 212, 228, 165, 163, 112, 58, 166, 76, 159, 66, 188].snap.new  integration_tests__tests__[72, 108, 78, 238, 103, 29, 157, 13, 77, 227, 177, 56, 214, 95, 88, 231].snap.new  integration_tests__tests__[73, 219, 135, 59, 69, 57, 83, 137, 127, 2, 210, 241, 119, 222, 150, 26].snap.new  integration_tests__tests__[73, 222, 210, 137, 69, 219, 150, 241, 127, 57, 135, 26, 119, 2, 83, 59].snap.new  integration_tests__tests__[75, 134, 141, 109, 44, 74, 137, 128, 51, 157, 244, 232, 55, 210, 24, 216].snap.new  integration_tests__tests__[82, 164, 200, 148, 133, 17, 106, 40, 227, 207, 47, 215, 246, 80, 94, 7].snap.new  integration_tests__tests__[82, 80, 47, 40, 133, 164, 94, 215, 227, 17, 200, 7, 246, 207, 106, 148].snap.new  integration_tests__tests__[88, 77, 202, 241, 27, 75, 90, 172, 219, 231, 202, 168, 27, 107, 176, 229].snap.new  integration_tests__tests__[90, 65, 66, 177, 25, 73, 220, 31, 163, 224, 25, 101, 122, 140, 4, 12].snap.new
