[package]
name = "poc-encryption-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3
debug-assertions = true

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }
ark-poly = { version = "^0.3.0", default-features = false  }
ark-poly-commit = { version = "^0.3.0", default-features = false  }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
simpleworks = {git = "https://github.com/Lambdaclass/simpleworks"}
digest = { version = "0.9", default-features = false }
rand_chacha = {version = "0.3.1"}
anyhow = "1.0"
collect_slice = "^1.2.0"
aes = "0.8"
rand = "0.8.5"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[dev-dependencies]
rand = "0.8"
parking_lot = "0.12"
cfg-if = "1"

[dev-dependencies.criterion]
version = "0.4"
features = ["async_futures"]

[dev-dependencies.pprof]
version = "0.11"
features = ["criterion", "flamegraph", "frame-pointer"]
default-features = false

[[bench]]
name = "benchmark"
harness = false

[features]
snarkvm_backend_flamegraph = ["benchmark_flamegraph"]
snarkvm_backend = []
vmtropy_backend_flamegraph = ["benchmark_flamegraph"]
vmtropy_backend = []
benchmark_flamegraph = []
